--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "mdbreact": "^4.14.0",
+    "axios": "^0.18.0",
+    "formik": "^1.5.7",
+    "mdbreact": "^4.15.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
+    "sweetalert-react": "^0.4.11",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
